<resources>
    <string name="app_name">WeatherApp</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="back_to_login">Back to Login!</string>
    <string name="register_here">Register Here!</string>
    <string name="login">Login</string>
    <string name="farm_track">Farm Track</string>
    <string name="forgot_password_click_here">Forgot Password? Click Here!</string>
    <string name="reset_password">Reset Password</string>
    <string name="cli_mate">Cli-Mate</string>
    <string name="weather_schedule">Weather Schedule</string>
    <string name="menu">Menu</string>
    <string name="home">Home</string>
    <string name="todo">TODO</string>
    <string name="view_password">View Password</string>
    <string name="weather_forecast">Weather Forecast</string>
</resources>
