<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#A4F8E3C2"
    tools:context=".Home">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="61dp"
        android:layout_height="43dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/logo" />

    <Button
        android:id="@+id/btnSchedule"
        android:layout_width="267dp"
        android:layout_height="63dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_button"
        android:backgroundTint=" #E95528"
        android:text="@string/weather_schedule"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/common_google_signin_btn_text_dark_pressed"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnMenu" />

    <Button
        android:id="@+id/btnFarmTrack"
        android:layout_width="267dp"
        android:layout_height="63dp"
        android:background="@drawable/rounded_button"
        android:backgroundTint=" #E95528"
        android:text="@string/farm_track"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/common_google_signin_btn_text_dark_pressed"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSchedule"
        app:layout_constraintVertical_bias="0.333" />

    <Button
        android:id="@+id/btnMenu"
        android:layout_width="267dp"
        android:layout_height="63dp"
        android:layout_marginTop="456dp"
        android:background="@drawable/rounded_button"
        android:backgroundTint=" #E95528"
        android:text="@string/menu"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/common_google_signin_btn_text_dark_pressed"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/home"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.367"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>